--- a/services.html
+++ b/services.html
@@ -1023,11 +1023,6 @@
       </div>
     </section>
 
-    <!-- Disclaimer -->
-       <div class="px-5 pt-3">
-      <span class="disclaimer mt-5 text-center">*Wax Disclaimer: Wax protection longevity varies based on vehicle condition, storage, and maintenance. Pre-existing paint damage or aftermarket paint may also affect the wax's lifespan. For optimal results, regular care and garaging are recommended.</span>
-    </div>
-
     <!-- Maintenance Plans -->
     <section id="maintenancePrice" class="pb-5 maintenance-packages">
         <div class="container py-5" data-aos="zoom-out">
@@ -1207,6 +1202,15 @@
         </div>
       </div>
     </section>
+
+      <!-- Disclaimer -->
+     <div class="px-5 pt-3">
+      <ol>
+        <li>Wax Disclaimer: Wax protection longevity varies based on vehicle condition, storage, and maintenance. Pre-existing paint damage or aftermarket paint may also affect the wax's lifespan. For optimal results, regular care and garaging are recommended.</li>
+        <li>Stain Removal Disclaimer: Each stain gets multiple steps of treatment for removal. Usually, we are able to remove the stain in question. However, in some cases, the stain might be etched deep into the fabric or surface we are treating, and is beyond repair. Refunds will not be provided once the add-on service has been completed.</li>
+        <li>Cabin Air Filter Replacement Disclaimer: Cabin Air Filter Replacements need to be inquired prior to the detail. We would need to confirm make/model/year/vin as well as filter availability prior to confirming booking.</li>
+        </ol>
+    </div>
 
 <!-- Footer -->
     <section id="footer">
