Add changes to footer

--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
   <video class="hero-video" autoplay muted loop playsinline>
     <source src="https://supreme-nomads-website.s3.us-east-1.amazonaws.com/hero-home.mp4">
   </video>
+
   <div class="row justify-content-center">
     <div class="hero-text-div col-12 col-md-10 text-center px-3 px-sm-5">
               <p class="hero-text">
@@ -572,7 +573,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Foam Bath and Hand Wash</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Wash Wheel Surfaces and Inner Barrel</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Iron Removal Treatment</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 6 Month Ceramic Wax*</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 6 Month Ceramic Wax</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup> Window Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Door Jambs Washed</p>
@@ -949,13 +950,13 @@
               </div>
             </div>
                   <!-- Disclaimer -->
-       <div class="px-3 pb-5 text-center">
+       <div class="px-3 pb-5">
       <span class="disclaimer">*Wax Disclaimer: Wax protection longevity varies based on vehicle condition, storage, and maintenance. Pre-existing paint damage or aftermarket paint may also affect the wax's lifespan. For optimal results, regular care and garaging are recommended.</span>
     </div>
             <div class="allServicesDiv text-center">
               <a
                 href="services.html"
-                class="viewAllServices btn btn-primary mt-3"
+                class="btn btn-primary mt-3"
                 >View All Services
                 <iconify-icon
                   icon="tabler:arrow-right"
@@ -972,31 +973,40 @@
 
   <!-- FOOTER -->
 <section id="footer">
-  <div class="container footer-containerG mt-5 mt-md-0 pt-3">
+  <div class="container footer-containerG mt-5 mt-md-0 pt-2">
     <div>
       <img src="https://res.cloudinary.com/dnsc73sla/image/upload/v1752006942/logo-gold-horse-name_dmbkjk.svg" alt="Supreme Nomands Logo" class="footer-logo mx-auto d-block mt-5"/>
     </div>
    
     <!-- Main Footer -->
     <footer class="row py-3">
-      <!-- Contact Info -->
-      <div class="col-12 col-lg-4 mb-4 mb-lg-0 text-center text-start">
-        <h5 class="mobile footer-heading1">Mobile Detailing Unit</h5>
-        <h5 class="mobile footer-heading2 pt-2">We come to you!</h5>
-        <div class="contact-info mt-2">
-          <p class="mb-1">
-            <a href="tel:+1704-561-1927" class="text-decoration-none" target="_blank" rel="noopener noreferrer">
-              <iconify-icon icon="mdi:phone" style="vertical-align: middle; margin-right: 6px;"></iconify-icon>704-561-1927
-            </a>
-          </p>
-          <p class="mt-3">
-            <a href="mailto:info@supremenomads.com" class="text-decoration-none" target="_blank" rel="noopener noreferrer">
-              <iconify-icon icon="mdi:email" style="vertical-align: middle; margin-right: 6px;"></iconify-icon>info@supremenomads.com
-            </a>
-          </p>
-        </div>
-        <div class="d-flex justify-content-center align-items-start mt-2">
-          <!-- social icons -->
+    
+      <!-- Contact Us -->
+<div class="col-12 col-lg-4 mb-4 mb-lg-0 text-center">
+  <h5 class="fs-5 mt-3 mt-lg-0 mb-3">Mobile Detailing Unit</h5>
+  <div class="row row-cols-1 g-0">
+    <div class="col">
+      <div class="footer-list mb-3">
+        <h6 class="mobile footer-heading2">We Come To You!</h6>
+      </div>
+    </div>
+    <div class="col">
+      <div class="footer-list mb-3">
+        <a href="tel:+1704-561-1927" class="nav-link text-uppercase p-0" target="_blank" rel="noopener noreferrer">
+          <iconify-icon icon="mdi:phone" style="vertical-align: middle; margin-right: 6px;"></iconify-icon>704-561-1927
+        </a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="footer-list mb-3">
+        <a href="mailto:info@supremenomads.com" class="nav-link text-uppercase p-0 footer-em" target="_blank" rel="noopener noreferrer">
+          <iconify-icon icon="mdi:email" style="vertical-align: middle; margin-right: 6px;"></iconify-icon>info@supremenomads.com
+        </a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="footer-list mb-3">
+        <div class="d-flex justify-content-center align-items-center">
           <a href="https://www.tiktok.com/@supremenomads704" target="_blank" rel="noopener noreferrer">
             <iconify-icon class="social-icon-footer pe-4" icon="ri:tiktok-fill"></iconify-icon>
           </a>
@@ -1009,14 +1019,22 @@
           <a href="https://www.yelp.com/biz/supreme-nomads-detailing-charlotte" target="_blank" rel="noopener noreferrer">
             <iconify-icon class="social-icon-footer pe-4" icon="mdi:yelp"></iconify-icon>
           </a>
-          <a href="#" target="_blank">
+          <a href="https://www.youtube.com/@SupremeNomads" target="_blank" rel="noopener noreferrer">
             <iconify-icon class="social-icon-footer" icon="mdi:youtube"></iconify-icon>
           </a>
         </div>
       </div>
+    </div>
+        <div class="col">
+      <div class="footer-list mb-3">
+        <p>Icons by <a href="https://icons8.com" target="_blank" rel="noopener noreferrer">Icons8</a></p>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- Cities -->
-<div class="col-12 col-lg-4 text-center">
+<div class="col-12 col-lg-4 mb-4 mb-lg-0 text-center">
   <h5 class="fs-5 mt-3 mt-lg-0 mb-3">We Serve</h5>
   <div class="row row-cols-1 row-cols-lg-2 g-0">
     <div class="col">
@@ -1108,9 +1126,9 @@
 
   <!-- Copyright -->
 <div class="container">
-    <footer class="d-flex flex-column flex-md-row justify-content-center justify-content-md-between align-items-center py-2 pt-4 border-top">
-      <p class="mb-1 mb-md-0">© 2022 - 2025 | All Rights Reserved</p>
-      <p class="mb-0">Supreme Nomads Detailing LLC</p>
+    <footer class="d-flex flex-column flex-md-row justify-content-center justify-content-md-between align-items-center py-2 border-top">
+      <p class="mb-1 mb-md-0 footer-copy">© 2022 - 2025 | All Rights Reserved</p>
+      <p class="mb-0 footer-copy">Supreme Nomads Detailing LLC</p>
     </footer>
 </div>
 </section>
