--- a/about.html
+++ b/about.html
@@ -407,125 +407,166 @@
 
 
 <!-- Footer -->
-    <section id="footer">
-      <div class="container footer-containerG mt-5 mt-md-0 pt-3">
-  <footer class="row my-5 py-5">
+<section id="footer">
+  <div class="container footer-containerG mt-5 mt-md-0 pt-2">
+    <div>
+      <img src="https://res.cloudinary.com/dnsc73sla/image/upload/v1752006942/logo-gold-horse-name_dmbkjk.svg" alt="Supreme Nomands Logo" class="footer-logo mx-auto d-block mt-5"/>
+    </div>
+   
+    <!-- Main Footer -->
+    <footer class="row py-3">
     
-    <!-- Logo & Contact -->
-    <div><img src="https://res.cloudinary.com/dnsc73sla/image/upload/v1752006942/logo-gold-horse-name_dmbkjk.svg" alt="Supreme Nomands Logo" class="footer-logo mx-auto d-block"/></div>
-    <div class="col-12 col-lg-3 mb-4 mb-lg-0 text-center text-lg-start">
-      <h5 class="mobile footer-heading1">Mobile Detailing Unit</h5>
-      <h6 class="mobile footer-heading2">We come to you!</h6>
-      <div class="contact-info mt-3">
-        <p class="mb-1">
-          <a href="tel:+1704-561-1927" class="text-decoration-none" target="_blank" rel="noopener noreferrer">
-            <iconify-icon icon="mdi:phone" style="vertical-align: middle; margin-right: 6px;"></iconify-icon>704-561-1927
-          </a>
-        </p>
-        <p>
-          <a href="mailto:info@supremenomads.com" class="text-decoration-none" target="_blank" rel="noopener noreferrer">
-            <iconify-icon icon="mdi:email" style="vertical-align: middle; margin-right: 6px;"></iconify-icon>info@supremenomads.com
-          </a>
-        </p>
-      </div>
-      <div class="d-flex justify-content-center justify-content-lg-start align-items-center mt-3">
-        <!-- social icons -->
-          <a
-                href="https://www.tiktok.com/@supremenomads704"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><iconify-icon
-                  class="social-icon-footer pe-4"
-                  icon="ri:tiktok-fill"
-                ></iconify-icon
-              ></a>
-              <a
-                href="https://www.instagram.com/supremenomads"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><iconify-icon
-                  class="social-icon-footer pe-4"
-                  icon="mdi:instagram"
-                ></iconify-icon
-              ></a>
-              <a
-                href="https://www.facebook.com/Supremenomads/"
-                target="_blank"
-                rel="noopener noreferrer"
-                onclick="openFacebook(event)"
-                ><iconify-icon
-                  class="social-icon-footer pe-4"
-                  icon="mdi:facebook"
-                ></iconify-icon
-              ></a>
-              <a
-                href="https://www.yelp.com/biz/supreme-nomads-detailing-charlotte"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><iconify-icon
-                  class="social-icon-footer pe-4"
-                  icon="mdi:yelp"
-                ></iconify-icon
-              ></a>
-              <a href="#" target="_blank"
-                ><iconify-icon
-                  class="social-icon-footer pe-4"
-                  icon="mdi:youtube"
-                ></iconify-icon
-              ></a>
+      <!-- Contact Us -->
+<div class="col-12 col-lg-4 mb-4 mb-lg-0 text-center">
+  <h5 class="fs-5 mt-3 mt-lg-0 mb-3">Mobile Detailing Unit</h5>
+  <div class="row row-cols-1 g-0">
+    <div class="col">
+      <div class="footer-list mb-3">
+        <h6 class="mobile footer-heading2">We Come To You!</h6>
       </div>
     </div>
-
-    <!-- Cities -->
-<div class="col-12 col-lg-7 text-center text-lg-start">
-  <h5 class="fs-5 mt-3 mt-lg-0 mb-3 d-flex justify-content-center">We Serve</h5>
-  <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3 justify-content-center">
-    <div class="col"><a href="#" class="nav-link text-uppercase p-0">Charlotte</a></div>
-    <div class="col"><a href="#" class="nav-link text-uppercase p-0">Concord</a></div>
-    <div class="col"><a href="#" class="nav-link text-uppercase p-0">Harrisburg</a></div>
-    <div class="col"><a href="#" class="nav-link text-uppercase p-0">Huntersville</a></div>
-    <div class="col"><a href="#" class="nav-link text-uppercase p-0">Matthews</a></div>
-    <div class="col"><a href="#" class="nav-link text-uppercase p-0">Waxhaw</a></div>
-    <div class="col"><a href="#" class="nav-link text-uppercase p-0">Fort Mill, SC</a></div>
-    <div class="col"><a href="#" class="nav-link text-uppercase p-0">Indian Land, SC</a></div>
-    <div class="col"><a href="#" class="nav-link text-uppercase p-0">Rockhill, SC</a></div>
+    <div class="col">
+      <div class="footer-list mb-3">
+        <a href="tel:+1704-561-1927" class="nav-link text-uppercase p-0" target="_blank" rel="noopener noreferrer">
+          <iconify-icon icon="mdi:phone" style="vertical-align: middle; margin-right: 6px;"></iconify-icon>704-561-1927
+        </a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="footer-list mb-3">
+        <a href="mailto:info@supremenomads.com" class="nav-link text-uppercase p-0 footer-em" target="_blank" rel="noopener noreferrer">
+          <iconify-icon icon="mdi:email" style="vertical-align: middle; margin-right: 6px;"></iconify-icon>info@supremenomads.com
+        </a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="footer-list mb-3">
+        <div class="d-flex justify-content-center align-items-center">
+          <a href="https://www.tiktok.com/@supremenomads704" target="_blank" rel="noopener noreferrer">
+            <iconify-icon class="social-icon-footer pe-4" icon="ri:tiktok-fill"></iconify-icon>
+          </a>
+          <a href="https://www.instagram.com/supremenomads" target="_blank" rel="noopener noreferrer">
+            <iconify-icon class="social-icon-footer pe-4" icon="mdi:instagram"></iconify-icon>
+          </a>
+          <a href="https://www.facebook.com/Supremenomads/" target="_blank" rel="noopener noreferrer" onclick="openFacebook(event)">
+            <iconify-icon class="social-icon-footer pe-4" icon="mdi:facebook"></iconify-icon>
+          </a>
+          <a href="https://www.yelp.com/biz/supreme-nomads-detailing-charlotte" target="_blank" rel="noopener noreferrer">
+            <iconify-icon class="social-icon-footer pe-4" icon="mdi:yelp"></iconify-icon>
+          </a>
+          <a href="https://www.youtube.com/@SupremeNomads" target="_blank" rel="noopener noreferrer">
+            <iconify-icon class="social-icon-footer" icon="mdi:youtube"></iconify-icon>
+          </a>
+        </div>
+      </div>
+    </div>
+        <div class="col">
+      <div class="footer-list mb-3">
+        <p>Icons by <a href="https://icons8.com" target="_blank" rel="noopener noreferrer">Icons8</a></p>
+      </div>
+    </div>
   </div>
 </div>
 
-    <!-- Pages / Quick Links -->
-<div class="col-12 col-lg-2 mb-4 mb-lg-0 text-center text-lg-start">
-      <h5 class="fs-5 mt-3 mt-lg-0 mb-3">Quick Links</h5>
-      <ul class="navbar-nav flex-column mx-auto d-inline-block">
-        <li class="nav-item footer-list mb-3"><a href="#" class="nav-link text-uppercase p-0">Home</a></li>
-        <li class="nav-item footer-list mb-3"><a href="project.html" class="nav-link text-uppercase p-0">Gallery</a></li>
-        <li class="nav-item footer-list mb-3"><a href="services.html" class="nav-link text-uppercase p-0">Our Services</a></li>
-        <li class="nav-item footer-list mb-3"><a href="about.html" class="nav-link text-uppercase p-0">About Us</a></li>
-        <li class="nav-item footer-list mb-3"><a href="services-single.html" class="nav-link text-uppercase p-0">Academy</a></li>
-      </ul>
+<!-- Cities -->
+<div class="col-12 col-lg-4 mb-4 mb-lg-0 text-center">
+  <h5 class="fs-5 mt-3 mt-lg-0 mb-3">We Serve</h5>
+  <div class="row row-cols-1 row-cols-lg-2 g-0">
+    <div class="col">
+      <div class="footer-list mb-3">
+        <a href="#" class="nav-link text-uppercase p-0">Charlotte</a>
+      </div>
     </div>
-
-  </footer>
+    <div class="col">
+      <div class="footer-list mb-3">
+        <a href="#" class="nav-link text-uppercase p-0">Concord</a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="footer-list mb-3">
+        <a href="#" class="nav-link text-uppercase p-0">Harrisburg</a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="footer-list mb-3">
+        <a href="#" class="nav-link text-uppercase p-0">Huntersville</a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="footer-list mb-3">
+        <a href="#" class="nav-link text-uppercase p-0">Matthews</a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="footer-list mb-3">
+        <a href="#" class="nav-link text-uppercase p-0">Waxhaw</a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="footer-list mb-3">
+        <a href="#" class="nav-link text-uppercase p-0">Lake Norman</a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="footer-list mb-3">
+        <a href="#" class="nav-link text-uppercase p-0">Fort Mill, SC</a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="footer-list mb-3">
+        <a href="#" class="nav-link text-uppercase p-0">Indian Land, SC</a>
+      </div>
+    </div>
+        <div class="col">
+      <div class="footer-list mb-3">
+        <a href="#" class="nav-link text-uppercase p-0">Rock Hill, SC</a>
+      </div>
+    </div>
+  </div>
 </div>
-        </footer>
-      </div>
 
-      <footer
-        class="d-flex flex-wrap justify-content-between align-items-center border-top"
-      ></footer>
-
-      <div class="container">
-        <footer
-          class="d-flex flex-wrap justify-content-between align-items-center py-2 pt-4"
-        >
-          <div class="col-md-6 d-flex align-items-center">
-            <p>© 2021 - 2025 | All Rights Reserved</p>
+      <!-- Quick Links -->
+      <div class="col-12 col-lg-4 mb-4 mb-lg-0 text-center">
+        <h5 class="fs-5 mt-3 mt-lg-0 mb-3">Quick Links</h5>
+        <div class="row row-cols-1 g-0">
+          <div class="col">
+            <div class="footer-list mb-3">
+              <a href="#" class="nav-link text-uppercase p-0">Home</a>
+            </div>
           </div>
-          <div class="col-md-6 d-flex align-items-center justify-content-end">
-            <p>Supreme Nomads Detailing LLC</p>
+          <div class="col">
+            <div class="footer-list mb-3">
+              <a href="project.html" class="nav-link text-uppercase p-0">Gallery</a>
+            </div>
           </div>
-        </footer>
+          <div class="col">
+            <div class="footer-list mb-3">
+              <a href="services.html" class="nav-link text-uppercase p-0">Our Services</a>
+            </div>
+          </div>
+          <div class="col">
+            <div class="footer-list mb-3">
+              <a href="about.html" class="nav-link text-uppercase p-0">About Us</a>
+            </div>
+          </div>
+          <div class="col">
+            <div class="footer-list mb-3">
+              <a href="services-single.html" class="nav-link text-uppercase p-0">Academy</a>
+            </div>
+          </div>
+        </div>
       </div>
-    </section>
+    </footer>
+  </div>
+
+  <!-- Copyright -->
+<div class="container">
+    <footer class="d-flex flex-column flex-md-row justify-content-center justify-content-md-between align-items-center py-2 border-top">
+      <p class="mb-1 mb-md-0 footer-copy">© 2022 - 2025 | All Rights Reserved</p>
+      <p class="mb-0 footer-copy">Supreme Nomads Detailing LLC</p>
+    </footer>
+</div>
+</section>
 
 
 
