--- a/services.html
+++ b/services.html
@@ -1073,10 +1073,7 @@
               <div
                 class="services-content text-center border py-3 py-md-5 px-3"
               >
-                <iconify-icon
-                  class="service-icon"
-                  icon="fa-solid:hands-wash"
-                ></iconify-icon>
+                <img src="images/maintenance-icons/icons8-headlight-100.png" alt="headlight-icon">
 
                 <h4 class="my-3">Headlight Restoration</h4>
                 <p>
@@ -1088,10 +1085,7 @@
               <div
                 class="services-content text-center border py-3 py-md-5 px-3"
               >
-                <iconify-icon
-                  class="service-icon"
-                  icon="material-symbols:cleaning-bucket-outline-rounded"
-                ></iconify-icon>
+                <img src="images/maintenance-icons/icons8-splash-100.png" alt="headlight-icon">
                 <h4 class="my-3">Stain Removal* (Extractor Vacuum)</h4>
                 <p>
                   For some of the deeper stains in your vehicle's upholstery and carpets, shampoo and conditioner may not be enough. If you have excessive stains, deeply trapped dirt, or even smells coming from the fabrics in your vehicle, this would be a great add on service to an Interior Package. This also pairs well with an Ozone Treatment to completely refresh your interior.
@@ -1102,10 +1096,7 @@
               <div
                 class="services-content text-center border py-3 py-md-5 px-3"
               >
-                <iconify-icon
-                  class="service-icon"
-                  icon="fa6-solid:car-on"
-                ></iconify-icon>
+                      <img src="images/maintenance-icons/icons8-inhale-100.png" alt="headlight-icon">
 
                 <h4 class="my-3">Odor Removal (Ozone Treatments)</h4>
                 <p>
@@ -1117,10 +1108,7 @@
               <div
                 class="services-content text-center border py-3 py-md-5 px-3"
               >
-                <iconify-icon
-                  class="service-icon"
-                  icon="bxs:car-wash"
-                ></iconify-icon>
+                    <img src="images/maintenance-icons/icons8-car-door-100.png" alt="headlight-icon">
 
                 <h4 class="my-3">Trim Restoration</h4>
                 <p>
@@ -1132,10 +1120,7 @@
               <div
                 class="services-content text-center border py-3 py-md-5 px-3"
               >
-                <iconify-icon
-                  class="service-icon"
-                  icon="mdi:tire"
-                ></iconify-icon>
+                     <img src="images/maintenance-icons/icons8-air-quality-100.png" alt="headlight-icon">
                 <h4 class="my-3">Cabin Air Filter Replacement*</h4>
                 <p>
                   Most manufacturers recommend replacing your cabin air filter at least once every year. In some cases, a cabin air filter should be replaced every six months, especially if the vehicle regularly travels through highly polluted areas or if the driver and/or passengers have allergies. We recommend letting us change this along with an Interior Package, Odor Removal, or Stain Treatment!
@@ -1146,10 +1131,7 @@
               <div
                 class="services-content text-center border py-3 py-md-5 px-3"
               >
-                <iconify-icon
-                  class="service-icon"
-                  icon="simple-icons:coronaengine"
-                ></iconify-icon>
+                     <img src="images/maintenance-icons/icons8-engine-100.png" alt="headlight-icon">
                 <h4 class="my-3">Engine Bay Detail</h4>
                 <p>
                   Do you have dust and/or debris in your engine bay? Let us take care of cleaning your engine and bay! Some of the benefits of a clean engine bay include, removal of spilled oils and/or coolant that may potentially cause heating issues, a clean slate for easier identification of leaks, and a happier mechanic!
@@ -1160,10 +1142,7 @@
               <div
                 class="services-content text-center border py-3 py-md-5 px-3"
               >
-                <iconify-icon
-                  class="service-icon"
-                  icon="simple-icons:coronaengine"
-                ></iconify-icon>
+                     <img src="images/maintenance-icons/icons8-undercarriage-100.png" alt="headlight-icon">
                 <h4 class="my-3">Undercarriage Cleaning</h4>
                 <p>
                   Whether you’ve recently been through salt, been on a road trip, or off roading, the underside of your vehicle may have accumulated dirt, grime, and/or salt. An undercarriage cleaning is the perfect solution to remove unwanted debris. Benefits include reduced risk of rust and corrosion, reduced suspension wear, and more!
@@ -1174,10 +1153,7 @@
               <div
                 class="services-content text-center border py-3 py-md-5 px-3"
               >
-                <iconify-icon
-                  class="service-icon"
-                  icon="simple-icons:coronaengine"
-                ></iconify-icon>
+                 <img src="images/maintenance-icons/icons8-paint-brush-100.png" alt="headlight-icon">
                 <h4 class="my-3">Paint Touch Up</h4>
                 <p>
                   Daily driving can expose your car to harsh conditions, leading to rock chips, scratches from mailboxes, or even scrapes from shopping carts. For minor paint damage, touch-up paint offers a cost-effective alternative to a full respray. While it won't completely erase the blemish, it will significantly reduce its visibility and shield your vehicle's metal from the elements.
@@ -1188,10 +1164,7 @@
               <div
                 class="services-content text-center border py-3 py-md-5 px-3"
               >
-                <iconify-icon
-                  class="service-icon"
-                  icon="simple-icons:coronaengine"
-                ></iconify-icon>
+                 <img src="images/maintenance-icons/icons8-pets-100.png" alt="headlight-icon">
                 <h4 class="my-3">Pet Hair Removal</h4>
                 <p>
                   We all love to take our furry friends with us wherever we go. In many cases, this means dander and hair gets left behind on the carpets and seats. Pet hair removal requires additional time, tools, and resources. Depending on the carpet quality and hair attribute, this can be a difficult process to restore the interior to a factory state.
