--- a/project.html
+++ b/project.html
@@ -347,7 +347,7 @@
 
     <!-- YT embedded -->
 <div class="video-container">
-    <iframe src="https://www.youtube.com/embed/7LFoHq9cgts?si=tJlqLtu2bWcdF5_-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/BnKc-n4MM9c?si=5RnSswOmSIbUd_1a" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
 
